welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:1: error: not found: value Direction
setDirection(Direction.EST)
             ^DwarfCode:5: error: not found: value Direction
  setDirection(Direction.OUEST)
               ^DwarfCode:7: error: not found: value Direction
  setDirection(Direction.EST)
               ^