welcome.lessons.welcome.summative.Moria.scala.code
setDirection(Direction.EST)
while(!estSurBiscuit() || estFaceMur){avance();}
while(!estFaceMur()){
  porteBiscuit()
  setDirection(Direction.OUEST)
  while(!estSurBiscuit()){avance();}
  setDirection(Direction.EST)
  avance();
  poseBiscuit();
  while(!estSurBiscuit() || estFaceMur){avance();}
  
}
droite()
avance()
gauche()
avance()